--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,3 @@
-# version: 2
-
-# mkdocs:
-#   configuration: mkdocs.yml
-
 # Project Information
 
 site_name: MRI User Manual
@@ -62,4 +57,4 @@ plugins:
       separator: '[\s\-\.]+'
       min_search_length: 2
 
-lang: ["en"]
+lang: "en"
