--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 # Project Information
 
 site_name: CHN User Manual
-site_url: 127.0.0.1:8000/
+site_url: https://uw-chn.github.io/CHN-User-Manual/
 site_description: This is a description that ends up in the meta tag
 site_author: Kelly Chang
 copyright: null
 
-repo_url: https://github.com/example/repo/
+repo_url: https://github.com/UW-CHN/CHN-User-Manual/
 repo_name: "GitHub"
 remote_branch: gh-pages
 remote_name: origin
@@ -17,7 +17,7 @@ google_analytics: null
 
 nav:
   - HOME: index.md
-  - SIEMENS PRISMA 3T SCANNER:
+  - SIEMENS PRISMA 3T:
     - Setting Up and Acquiring Scans: siemens-prisma/setting-up.md
     - "EPI: Basic Parameter and Sequence Issues": siemens-prisma/epi-basic.md
     - "EPI: Advanced Parameter and Sequence Issues": siemens-prisma/epi-advanced.md
@@ -30,16 +30,20 @@ nav:
     - Mock Scanner: peripherals/mock-scanner.md
     - Sensimetrics S14: peripherals/sensimetrics-s14.md
     - Physiology: peripherals/physiology.md
-  - FORMS: forms.md
-  - CONTACT: contact.md
+  - FLYWHEEL:
+    - General: flywheel/general.md
+    - BIDS Curation: flywheel/bids-curation.md
+    - FreeSurfer recon-all: flywheel/freesurfer-recon-all.md
   - APPENDIX:
     - Normal Operations Checklist: appendix/normal-checklist.md
     - Emergency Checklist: appendix/emergency-checklist.md
+    - Forms: forms.md
+    - Contact: contact.md
 
 # Build Directories
 
 theme:
-  name: readthedocs
+  name: material
   navigation_depth: 3
 
 docs_dir: 'docs'
@@ -63,3 +67,4 @@ plugins:
   - search:
       separator: '[\s\-\.]+'
       min_search_length: 2
+  - git-revision-date-localized
