updating image relative pathing pt. 3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_author: Kelly Chang
 repo_name: "CHN User Manual"
 repo_url: https://github.com/UW-CHN/CHN-User-Manual/
 
-copyright: Copyright &copy; 2020 - 2021 CHN
+copyright: Copyright &copy; 2021 CHN
 
 # Documentation Layout
 
