finished flywheel recon-all page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,9 @@ extra_templates: []
 markdown_extensions:
   - admonition
   - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.inlinehilite
   - pymdownx.highlight
   - pymdownx.arithmatex:
